# miriam-pickup-lines

./: .gitignore  README.md  punch_line.json  pyproject.toml
.miriam_pickup_lines/: miriam_quotes.db
data/: punch_line.json  stupid is forever -- Miriam Defensor Santiago.epub
data/quotes/: quotes_1.json  quotes_2.json  quotes_3.json  quotes_4.json  quotes_5.json
src/miriam_pickup_lines/: __init__.py  config.py  database.py  main.py  presentation.py  punchline#1.py
